--- a/styles/index.css
+++ b/styles/index.css
@@ -13,23 +13,43 @@ body {
 header { 
     background-color: #4CAF50;
     color: white;
-    padding: 1%;
+    /* padding: 1%; */
     text-align: center;
+    display: flex;
+    height: 100px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header * {
+    border: 1px solid red;
+}
+
+.logo{
+    /* width: 22%; */
+    height: 100%;
 }
 
 .header-img {
     display: block;
     margin: 0 auto;
-    width: 100%; /* Mantém a largura total */
-    height: auto; /* Mantém a proporção natural */
-    max-height: 200px; /* Ajuste para evitar cortes exagerados */
-    object-fit: contain; /* Garante que a imagem fique visível sem cortes */
-    
+    width: 100%; 
+    height: 100%;
+    /* max-height: 200px;  */
+    object-fit: contain;    
+}
+
+nav{
+    display: flex;
+    height: 100%;
+    height: auto;
+    /* margin-top: 20px; */
 }
 
 nav ul {
     list-style: none;
-    padding: 0;
+    /* display: flex; */
+    height: 100%;
 }
 
 nav ul li {
@@ -83,11 +103,6 @@ footer {
     background-color: #8FBC8F;
     padding: 20px;
     border-radius: 5px;
-}
-
-.header-img, .about-img {
-    max-width: 100%;
-    height: auto;
 }
 
 .about {
