--- a/styles/index.css
+++ b/styles/index.css
@@ -5,9 +5,9 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif; /* Fonte Poppins */
-    background-color: #DFF0D8; /* Verde claro suave */
-    color: #2E7D32; /* Verde escuro para melhor contraste */
+    font-family: 'Poppins', sans-serif;
+    background-color: #DFF0D8;
+    color: #2E7D32;
     /* display: flex;
     flex-direction: column; */
 }
@@ -116,9 +116,7 @@ nav ul li a:hover {
     border-color: #16433b; /* Manter a cor da borda consistente */
 }
 
-/* =============================== */
-/* MAIN & SEÇÕES                     */
-/* =============================== */
+
 main {
     padding: 20px;
     background-color: #f4f4f4;
