--- a/styles/novidades.css
+++ b/styles/novidades.css
@@ -51,3 +51,10 @@ footer {
     color: #666;
 }
 
+.section{
+    border: 1px solid #4caf50;
+    background-color: #E8F5E9;
+    border-radius: 25px;
+    margin: 30px 0;
+    padding: 15px;
+}
